refactor: 迁移DtuPlugin到共用类库

--- a/src/debugs/ThingsGateway.Debug.Rcl/ThingsGateway.Debug.Rcl.csproj
+++ b/src/debugs/ThingsGateway.Debug.Rcl/ThingsGateway.Debug.Rcl.csproj
@@ -3,7 +3,13 @@
   <PropertyGroup>
     <DefineConstants>DriverDebug</DefineConstants>
   </PropertyGroup>
-
+  <ItemGroup>
+    <Content Remove="Locales\*.json" />
+    <EmbeddedResource Include="Locales\*.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\..\adapter\ThingsGateway.Foundation.Dlt645\ThingsGateway.Foundation.Dlt645.csproj" />
     <ProjectReference Include="..\..\adapter\ThingsGateway.Foundation.OpcDa\ThingsGateway.Foundation.OpcDa.csproj" />
