--- a/src/ThingsGateway.NewLife.X/ThingsGateway.NewLife.X.csproj
+++ b/src/ThingsGateway.NewLife.X/ThingsGateway.NewLife.X.csproj
@@ -1,5 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="$(SolutionDir)PackNuget.props" />
+  
   <PropertyGroup>
     <TargetFrameworks>net462;netstandard2.0;netstandard2.1;net8.0;</TargetFrameworks>
   </PropertyGroup>
