--- a/src/ThingsGateway.Admin.Application/ThingsGateway.Admin.Application.csproj
+++ b/src/ThingsGateway.Admin.Application/ThingsGateway.Admin.Application.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="Rougamo.Fody" Version="2.3.1" />
     <PackageReference Include="UAParser" Version="3.1.47" />
     <PackageReference Include="SqlSugarCore" Version="5.1.4.153" />
-    <PackageReference Include="Mapster" Version="7.4.1-pre01" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="BootstrapBlazor" Version="8.4.7" />
     <PackageReference Include="Yitter.IdGenerator" Version="1.0.14" />
   </ItemGroup>
