--- a/src/ThingsGateway.Gateway.Application/ThingsGateway.Gateway.Application.csproj
+++ b/src/ThingsGateway.Gateway.Application/ThingsGateway.Gateway.Application.csproj
@@ -5,7 +5,7 @@
     <PackageReference Include="SqlSugar.TDengineCore" Version="4.1.7" />
     <PackageReference Include="Rougamo.Fody" Version="2.3.1" />
     <PackageReference Include="CS-Script" Version="4.8.14" />
-    <PackageReference Include="TouchSocket.Dmtp" Version="2.0.3" />
+    <PackageReference Include="TouchSocket.Dmtp" Version="2.1.0-alpha.2" />
   </ItemGroup>
 
   <ItemGroup>
