--- a/src/adapter/ThingsGateway.Foundation.Demo/ThingsGateway.Foundation.Demo.csproj
+++ b/src/adapter/ThingsGateway.Foundation.Demo/ThingsGateway.Foundation.Demo.csproj
@@ -7,6 +7,9 @@
 		<OutputType>Exe</OutputType>    <TargetFrameworks>net6.0;</TargetFrameworks>
     
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="ThingsGateway.Foundation.Variable" Version="6.0.0.13-beta02" />
+  </ItemGroup>
 
 
   <ItemGroup>
