fix: variable实体类读写表达式执行错误  (#8)
* fix: variable实体类读写表达式执行错误

fix: 读写表达式编译错误，缺少using

feat: 增加部分使用demo

* refactor: 整理格式

--- a/src/adapter/ThingsGateway.Foundation.Demo/ThingsGateway.Foundation.Demo.csproj
+++ b/src/adapter/ThingsGateway.Foundation.Demo/ThingsGateway.Foundation.Demo.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="$(SolutionDir)Foundation.props" />
-  <Import Project="$(SolutionDir)PackNuget.props" />
   <PropertyGroup>
-    		<TargetFrameworks>net6.0;</TargetFrameworks>
-		<OutputType>Exe</OutputType>    <TargetFrameworks>net6.0;</TargetFrameworks>
-    
+    <TargetFrameworks>net6.0;</TargetFrameworks>
+    <OutputType>Exe</OutputType>
+
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="ThingsGateway.Foundation.Variable" Version="6.0.0.13-beta02" />
+  </ItemGroup>
 
 
   <ItemGroup>
