--- a/src/ThingsGateway.Foundation/ThingsGateway.Foundation.csproj
+++ b/src/ThingsGateway.Foundation/ThingsGateway.Foundation.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Channel\Base\**" />
+    <EmbeddedResource Remove="Channel\Base\**" />
+    <None Remove="Channel\Base\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Channel\TgSerialPortClient.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.4" />
     <PackageReference Include="TouchSocket" Version="2.1.0-alpha.2" />
     <PackageReference Include="TouchSocket.SerialPorts" Version="2.1.0-alpha.2" />
