--- a/src/ThingsGateway.Server/ThingsGateway.Server.csproj
+++ b/src/ThingsGateway.Server/ThingsGateway.Server.csproj
@@ -13,7 +13,7 @@
     <!--<UseWindowsThreadPool>false</UseWindowsThreadPool> -->
 
     <!--使用工作站GC-->
-    <ServerGarbageCollection>false</ServerGarbageCollection>
+    <!--<ServerGarbageCollection>false</ServerGarbageCollection>-->
 
     <!--<PlatformTarget>x86</PlatformTarget>-->
   </PropertyGroup>
