--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -5,7 +5,7 @@
     <LangVersion>12.0</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>6.0.0.12</Version>
+    <Version>6.0.1.0-beta01</Version>
     <Authors>Diego</Authors>
     <Company>Diego</Company>
     <Product>Diego</Product>
