--- a/src/ThingsGateway.Server/appsettings.Development.json
+++ b/src/ThingsGateway.Server/appsettings.Development.json
@@ -13,14 +13,13 @@
   },
 
   "HardwareInfoConfig": {
-    "Enable": true, //启用硬件信息获取
-    "RealInterval": 30, //更新间隔s
-    "HisInterval": 120, //更新间隔s
+    "HisInterval": 120, //历史更新间隔s
     "DaysAgo": 3 //保留3天数据
   },
 
   "ChannelThread": {
-    "CycleInterval": 10, //最小循环间隔
+    "MinCycleInterval": 10, //最小循环间隔
+    "MaxCycleInterval": 200, //最大循环间隔
     "MaxCount": 10000 //最大通道数量(每个通道为一个循环任务)
   },
 
