feat(TouchSocket): 调整代码

--- a/src/ThingsGateway.Server/appsettings.Development.json
+++ b/src/ThingsGateway.Server/appsettings.Development.json
@@ -20,6 +20,7 @@
   "ChannelThread": {
     "MinCycleInterval": 10, //最小循环间隔
     "MaxCycleInterval": 200, //最大循环间隔
+    "MaxVariableCount": 5000000, //最大变量数量
     "MaxCount": 10000 //最大通道数量(每个通道为一个循环任务)
   },
 
