--- a/src/ThingsGateway.Server/appsettings.json
+++ b/src/ThingsGateway.Server/appsettings.json
@@ -19,7 +19,8 @@
   "ChannelThread": {
     "MinCycleInterval": 10, //最小循环间隔
     "MaxCycleInterval": 200, //最大循环间隔
-    "MaxCount": 10000 //最大通道数量(每个通道为一个循环任务)
+    "MaxVariableCount": 400000, //最大变量数量
+    "MaxCount": 400 //最大通道数量(每个通道为一个循环任务)
   },
 
   "Logging": {
