refactor: 菜单增加i18n资源

--- a/src/ThingsGateway.Admin.Razor/ThingsGateway.Admin.Razor.csproj
+++ b/src/ThingsGateway.Admin.Razor/ThingsGateway.Admin.Razor.csproj
@@ -18,6 +18,14 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Pages\AppConfig\AppConfigPage.razor.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Pages\AppConfig\AppConfigPage.razor.css" />
+  </ItemGroup>
   
 </Project>
 
