feat(TouchSocket): 调整代码

--- a/src/ThingsGateway.Server/appsettings.Development.json
+++ b/src/ThingsGateway.Server/appsettings.Development.json
@@ -13,7 +13,8 @@
     "Redundancy": {
       "Enable": false, //启用冗余
       "IsPrimary": false, //是否主站
-      "IsStartBusinessDevice": true //是否启用备用站点的业务设备
+      "IsStartBusinessDevice": true, //是否启用备用站点的业务设备
+      "SyncInterval": 1000 //数据同步间隔
       //主从站的采集配置必须一致
       //默认主站优先，当主站恢复后，从站切换回备用模式。
       //主从站都完成对采集的初始化，但从站的数据都来自主站的数据同步
