--- a/src/adapter/ThingsGateway.Foundation.Demo/ThingsGateway.Foundation.Demo.csproj
+++ b/src/adapter/ThingsGateway.Foundation.Demo/ThingsGateway.Foundation.Demo.csproj
@@ -3,12 +3,11 @@
   <Import Project="$(SolutionDir)Foundation.props" />
   <Import Project="$(SolutionDir)PackNuget.props" />
   <PropertyGroup>
-    		<TargetFrameworks>net6.0;</TargetFrameworks>
-		<OutputType>Exe</OutputType>    <TargetFrameworks>net6.0;</TargetFrameworks>
-    
+    <TargetFrameworks>net6.0;</TargetFrameworks>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="ThingsGateway.Foundation.Variable" Version="6.0.1-beta08" />
+    <PackageReference Include="ThingsGateway.Foundation.Variable" Version="6.0.1.0-beta13" />
   </ItemGroup>
 
 
