--- a/src/ThingsGateway.Server/appsettings.Development.json
+++ b/src/ThingsGateway.Server/appsettings.Development.json
@@ -5,13 +5,12 @@
 
   //冗余配置
   "ManagementOptions": {
-    "RemoteUri": "127.0.0.1:7102", //主(备)站IP
-    "Port": 7101, //监听端口
+    "PrimaryUri": "127.0.0.1:7101", //主(备)站IP
     "VerifyToken": "ThingsGateway", //登录token，双方一致
     "HeartbeatInterval": 3000, //心跳间隔
     "MaxErrorCount": 3, //最大错误次数
     "Redundancy": {
-      "Enable": false, //启用冗余
+      "Enable": true, //启用冗余
       "IsPrimary": false, //是否主站
       "IsStartBusinessDevice": true, //是否启用备用站点的业务设备
       "SyncInterval": 5000 //数据同步间隔
