--- a/src/adapter/ThingsGateway.Foundation.Demo/ThingsGateway.Foundation.Demo.csproj
+++ b/src/adapter/ThingsGateway.Foundation.Demo/ThingsGateway.Foundation.Demo.csproj
@@ -7,7 +7,7 @@
     <OutputType>Exe</OutputType>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="ThingsGateway.Foundation.Variable" Version="8.0.0.0" />
+    <PackageReference Include="ThingsGateway.Foundation.Variable" Version="6.0.1.0-beta15" />
   </ItemGroup>
 
 
