--- a/src/ThingsGateway.Admin.Application/ThingsGateway.Admin.Application.csproj
+++ b/src/ThingsGateway.Admin.Application/ThingsGateway.Admin.Application.csproj
@@ -1,4 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="$(SolutionDir)Version.props" />
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
