--- a/src/ThingsGateway.Core/ThingsGateway.Core.csproj
+++ b/src/ThingsGateway.Core/ThingsGateway.Core.csproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="$(SolutionDir)Version.props" />
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
