--- a/src/adapter/ThingsGateway.Plugin.SqlHisAlarm/ThingsGateway.Plugin.SqlHisAlarm.csproj
+++ b/src/adapter/ThingsGateway.Plugin.SqlHisAlarm/ThingsGateway.Plugin.SqlHisAlarm.csproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
   <Import Project="$(SolutionDir)Plugin.props" />
+  <Import Project="$(SolutionDir)Version.props" />
 
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
