--- a/src/debugs/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
+++ b/src/debugs/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
-	<PropertyGroup>
+  <Import Project="$(SolutionDir)Version.props" />
+  <PropertyGroup>
 		<DefineConstants>DriverDebug</DefineConstants>
 	</PropertyGroup>
 	
