--- a/src/ThingsGateway.Foundation/ThingsGateway.Foundation.csproj
+++ b/src/ThingsGateway.Foundation/ThingsGateway.Foundation.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="$(SolutionDir)Foundation.props" />
   <Import Project="$(SolutionDir)PackNuget.props" />
+  <Import Project="$(SolutionDir)Version.props" />
 
   <PropertyGroup>
     <Description>工业设备通讯协议-基础类库</Description>
