--- a/src/ThingsGateway.NewLife.X/ThingsGateway.NewLife.X.csproj
+++ b/src/ThingsGateway.NewLife.X/ThingsGateway.NewLife.X.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="$(SolutionDir)PackNuget.props" />
-  
+  <Import Project="$(SolutionDir)Version.props" />
+
   <PropertyGroup>
     <TargetFrameworks>net462;netstandard2.0;netstandard2.1;net6.0;</TargetFrameworks>
   </PropertyGroup>
