--- a/src/ThingsGateway.Razor/ThingsGateway.Razor.csproj
+++ b/src/ThingsGateway.Razor/ThingsGateway.Razor.csproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
+  <Import Project="$(SolutionDir)Version.props" />
 
   <ItemGroup>
     <Content Remove="Locales\*.json" />
