--- a/src/adapter/ThingsGateway.Foundation.Dlt645/ThingsGateway.Foundation.Dlt645.csproj
+++ b/src/adapter/ThingsGateway.Foundation.Dlt645/ThingsGateway.Foundation.Dlt645.csproj
@@ -2,6 +2,7 @@
 
   <Import Project="$(SolutionDir)Foundation.props" />
   <Import Project="$(SolutionDir)PackNuget.props" />
+  <Import Project="$(SolutionDir)Version.props" />
 
   <PropertyGroup>
     <Description>工业设备通讯协议-Dlt645协议</Description>
