--- a/src/adapter/ThingsGateway.Foundation.Modbus/ThingsGateway.Foundation.Modbus.csproj
+++ b/src/adapter/ThingsGateway.Foundation.Modbus/ThingsGateway.Foundation.Modbus.csproj
@@ -2,6 +2,7 @@
 
   <Import Project="$(SolutionDir)Foundation.props" />
   <Import Project="$(SolutionDir)PackNuget.props" />
+  <Import Project="$(SolutionDir)Version.props" />
   <PropertyGroup>
     <Description>工业设备通讯协议-Modbus协议</Description>
     <DocumentationFile></DocumentationFile>
