--- a/src/debugs/ThingsGateway.Debug.Rcl/ThingsGateway.Debug.Rcl.csproj
+++ b/src/debugs/ThingsGateway.Debug.Rcl/ThingsGateway.Debug.Rcl.csproj
@@ -1,4 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
+  <Import Project="$(SolutionDir)Version.props" />
 
   <PropertyGroup>
     <DefineConstants>DriverDebug</DefineConstants>
