--- a/src/ThingsGateway.Server/appsettings.json
+++ b/src/ThingsGateway.Server/appsettings.json
@@ -9,7 +9,7 @@
     "MaxErrorCount": 3, //最大错误次数
     "Redundancy": {
       "Enable": true, //启用冗余
-      "IsPrimary": false, //是否主站
+      "IsPrimary": true, //是否主站
       "IsStartBusinessDevice": true, //是否启用备用站点的业务设备
       "SyncInterval": 5000 //数据同步间隔
       //主从站的采集配置必须一致
