feat: 增加可选配置json文件

--- a/src/ThingsGateway.Server/appsettings.Development.json
+++ b/src/ThingsGateway.Server/appsettings.Development.json
@@ -3,6 +3,7 @@
 
   "DetailedErrors": true,
 
+  "ConfigurationScanDirectories": [ "" ],
   //冗余配置
   "ManagementOptions": {
     "PrimaryUri": "127.0.0.1:7101", //主(备)站IP
