--- a/src/ThingsGateway.Server/Dockerfile
+++ b/src/ThingsGateway.Server/Dockerfile
@@ -3,25 +3,19 @@
 #构建：docker build -t diego2098/thingsgateway:latest .
 
 
-#aspnetcore6.0环境
+#aspnetcore8.0环境
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 COPY .  /app
 WORKDIR /app
 #默认web
-EXPOSE 7100
-#默认冗余
-EXPOSE 7101
-#默认mqtt
-EXPOSE 1883
-#默认mqtt
-EXPOSE 8083
-#默认opcua
-EXPOSE 49321
-#默认modbus
-EXPOSE 502
+EXPOSE 5000
 #图像库
 RUN echo "deb https://mirrors.tuna.tsinghua.edu.cn/debian/ sid main contrib non-free" > /etc/apt/sources.list
 RUN apt-get update && apt-get -y install libfontconfig1
 
+# 添加时区环境变量，亚洲，上海
+ENV TimeZone=Asia/Shanghai
+# 使用软连接，并且将时区配置覆盖/etc/timezone
+RUN ln -snf /usr/share/zoneinfo/$TimeZone /etc/localtime && echo $TimeZone > /etc/timezone
 
-ENTRYPOINT ["dotnet", "ThingsGateway.Server.dll","--urls","http://*:7100"]
+ENTRYPOINT ["dotnet", "ThingsGateway.Server.dll","--urls","http://*:5000"]
