--- a/src/ThingsGateway.Server/Dockerfile
+++ b/src/ThingsGateway.Server/Dockerfile
@@ -1,7 +1,7 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-#构建：docker build -t diego2098/thingsgateway:latest .
-
+#构建：docker build -t registry.cn-shenzhen.aliyuncs.com/thingsgateway/thingsgateway:latest .
+#拉取：docker pull registry.cn-shenzhen.aliyuncs.com/thingsgateway/thingsgateway
 
 #aspnetcore8.0环境
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
