--- a/src/adapter/ThingsGateway.Foundation.Variable/ThingsGateway.Foundation.Variable.csproj
+++ b/src/adapter/ThingsGateway.Foundation.Variable/ThingsGateway.Foundation.Variable.csproj
@@ -5,7 +5,7 @@
   <PropertyGroup>
     <Description>工业设备通讯协议-变量</Description>
     <TargetFrameworks>netstandard2.0;net6.0;</TargetFrameworks>
-    <Version>8.2</Version>
+    <Version>8.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <None Include="$(SolutionDir)\adapter\ThingsGateway.Foundation.SourceGenerator\tools\*.ps1" PackagePath="tools" Pack="true" Visible="false" />
+    <Compile Include="..\..\ThingsGateway.Gateway.Application\CSharpScriptEngine\ExpressionEvaluatorExtension.cs" Link="ExpressionEvaluatorExtension.cs" />
     <None Include="$(SolutionDir)\adapter\ThingsGateway.Foundation.SourceGenerator\bin\$(Configuration)\netstandard2.0\ThingsGateway.Foundation.SourceGenerator.dll" PackagePath="analyzers\dotnet\cs" Pack="true" Visible="false" />
   </ItemGroup>
 
