other:更新调试工具

--- a/src/debugs/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
+++ b/src/debugs/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
@@ -3,7 +3,9 @@
   <PropertyGroup>
 		<DefineConstants>DriverDebug</DefineConstants>
 	</PropertyGroup>
-	
+  <PropertyGroup Condition="'$(SolutionName)'=='ThingsGateway - Pro'">
+    <DefineConstants>Pro</DefineConstants>
+  </PropertyGroup>
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<ApplicationIcon>favicon.ico</ApplicationIcon>
@@ -27,10 +29,11 @@
 
 
 	<ItemGroup>
-
 	  <ProjectReference Include="..\ThingsGateway.Debug.Rcl\ThingsGateway.Debug.Rcl.csproj" />
 	</ItemGroup>
-
+  <ItemGroup Condition="'$(SolutionName)'=='ThingsGateway - Pro'">
+    <ProjectReference Include="$(SolutionDir)\pro\ThingsGateway.Debug.ProRcl\ThingsGateway.Debug.ProRcl.csproj" />
+  </ItemGroup>
 
 	<ItemGroup>
 		<Content Update="wwwroot\**">
