--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -13,7 +13,9 @@
     <RepositoryType>Gitee</RepositoryType>
     <GenerateResxSourceIncludeDefaultValues>true</GenerateResxSourceIncludeDefaultValues>
   </PropertyGroup>
-
+  <PropertyGroup Condition="'$(Configuration)'=='Release'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
   <ItemGroup>
     <None Include="$(SolutionDir)..\README.md" Pack="true" PackagePath="\" />
     <None Include="$(SolutionDir)..\LICENSE" Pack="true" PackagePath="\" />
