--- a/src/PackNuget.props
+++ b/src/PackNuget.props
@@ -21,4 +21,10 @@
   <ItemGroup>
     <None Include="$(SolutionDir)PackNuget.props" Pack="true" PackagePath="\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Include="$(SolutionDir)..\README.md" Pack="true" PackagePath="\" />
+    <None Include="$(SolutionDir)..\LICENSE" Pack="true" PackagePath="\" />
+    <None Include="$(SolutionDir)..\icon.png" Pack="true" PackagePath="\" />
+  </ItemGroup>
 </Project>
