--- a/benchmark/BenchmarkConsoleApp.csproj
+++ b/benchmark/BenchmarkConsoleApp.csproj
@@ -10,6 +10,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
+		<PackageReference Include="HslCommunication" Version="12.0.2" />
 		<PackageReference Include="MemoryPack" Version="1.10.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
 
