--- a/benchmark/BenchmarkConsoleApp.csproj
+++ b/benchmark/BenchmarkConsoleApp.csproj
@@ -12,9 +12,9 @@
 		<PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
 		<PackageReference Include="HslCommunication" Version="12.0.2" />
 		<PackageReference Include="NModbus" Version="3.0.81" />
-		<PackageReference Include="ThingsGateway.Foundation.Modbus" Version="6.0.3.50" />
-		<!--<PackageReference Include="ThingsGateway.Foundation.SiemensS7" Version="6.0.3.47" />-->
-		<PackageReference Include="TouchSocket.Modbus" Version="2.1.0-alpha.22" />
+		<PackageReference Include="S7netplus" Version="0.20.0" />
+		<PackageReference Include="ThingsGateway.Foundation.Modbus" Version="6.0.3.51" />
+		<PackageReference Include="ThingsGateway.Foundation.SiemensS7" Version="6.0.3.51" />
 	</ItemGroup>
 
 </Project>
