refactor: 添加Dtu心跳回应间隔

--- a/src/Version.props
+++ b/src/Version.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <Version>6.0.3.67</Version>
+    <Version>6.0.3.68-beta.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
