--- a/src/ThingsGateway.Razor/ThingsGateway.Razor.csproj
+++ b/src/ThingsGateway.Razor/ThingsGateway.Razor.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <Import Project="$(SolutionDir)Version.props" />
+  <Import Project="$(SolutionDir)PackNuget.props" />
 
   <ItemGroup>
     <Content Remove="Locales\*.json" />
@@ -21,6 +22,8 @@
   <ItemGroup>
     <Content Update="wwwroot\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <Pack>true</Pack>
+      <PackagePath>contentFiles/any/wwwroot</PackagePath>
     </Content>
   </ItemGroup>
 </Project>
