--- a/src/Version.props
+++ b/src/Version.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <Version>6.0.3.73-beta.1</Version>
+    <Version>6.0.3.74</Version>
   </PropertyGroup>
 
   <ItemGroup>
