--- a/src/adapter/ThingsGateway.Foundation.Demo/ThingsGateway.Foundation.Demo.csproj
+++ b/src/adapter/ThingsGateway.Foundation.Demo/ThingsGateway.Foundation.Demo.csproj
@@ -6,9 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ThingsGateway.Foundation.Variable" Version="8.6.0" />
-    <PackageReference Include="ThingsGateway.Foundation.SiemensS7" Version="6.0.3.71" />
-    <PackageReference Include="ThingsGateway.Foundation.Modbus" Version="6.0.3.71" />
+    <PackageReference Include="ThingsGateway.Foundation.Variable" Version="*" />
+    <PackageReference Include="ThingsGateway.Foundation.SiemensS7" Version="*" />
+    <PackageReference Include="ThingsGateway.Foundation.Modbus" Version="*" />
   </ItemGroup>
 
 
