--- a/src/debugs/ThingsGateway.Debug.Rcl/ThingsGateway.Debug.Rcl.csproj
+++ b/src/debugs/ThingsGateway.Debug.Rcl/ThingsGateway.Debug.Rcl.csproj
@@ -12,17 +12,6 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\..\adapter\ThingsGateway.Foundation.Dlt645\ThingsGateway.Foundation.Dlt645.csproj" />
-    <ProjectReference Include="..\..\adapter\ThingsGateway.Foundation.SiemensS7\ThingsGateway.Foundation.SiemensS7.csproj" />
-    <ProjectReference Include="..\..\adapter\ThingsGateway.Foundation.OpcDa\ThingsGateway.Foundation.OpcDa.csproj" />
-    <ProjectReference Include="..\..\adapter\ThingsGateway.Foundation.OpcUa\ThingsGateway.Foundation.OpcUa.csproj" />
-    <ProjectReference Include="..\..\ThingsGateway.Foundation\ThingsGateway.Foundation.csproj" />
-    <ProjectReference Include="..\..\ThingsGateway.Razor\ThingsGateway.Razor.csproj" />
-    <ProjectReference Include="..\..\adapter\ThingsGateway.Foundation.Modbus\ThingsGateway.Foundation.Modbus.csproj" />
-  </ItemGroup>
-
-
-  <ItemGroup>
     <Compile Include="..\..\adapter\ThingsGateway.Plugin.Dlt645\Pages\Dlt645_2007Master.razor.cs" Link="Pages\Dlt645_2007Master.razor.cs" />
     <Compile Include="..\..\adapter\ThingsGateway.Plugin.SiemensS7\Pages\SiemensS7Master.razor.cs" Link="Pages\SiemensS7Master.razor.cs" />
     <Compile Include="..\..\adapter\ThingsGateway.Plugin.Modbus\Pages\ModbusMaster.razor.cs" Link="Pages\ModbusMaster.razor.cs" />
@@ -39,7 +28,6 @@
     <Compile Include="..\..\ThingsGateway.Gateway.Razor\DebugPages\LogConsole.razor.cs" Link="DebugPages\LogConsole.razor.cs" />
   </ItemGroup>
 
-
   <ItemGroup>
     <Content Include="..\..\ThingsGateway.Gateway.Razor\DebugPages\AdapterDebugComponent.razor" Link="DebugPages\AdapterDebugComponent.razor" />
     <Content Include="..\..\ThingsGateway.Gateway.Razor\DebugPages\ChannelDataDebugComponent.razor" Link="DebugPages\ChannelDataDebugComponent.razor" />
@@ -55,6 +43,15 @@
     <Content Include="..\..\adapter\ThingsGateway.Plugin.OpcDa\Pages\OpcDaMaster.razor" Link="Pages\OpcDaMaster.razor" />
     <Content Include="..\..\adapter\ThingsGateway.Plugin.OpcUa\Pages\OpcUaImportVariable.razor" Link="Pages\OpcUaImportVariable.razor" />
     <Content Include="..\..\adapter\ThingsGateway.Plugin.OpcUa\Pages\OpcUaMaster.razor" Link="Pages\OpcUaMaster.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ThingsGateway.Razor" Version="*" />
+    <PackageReference Include="ThingsGateway.Foundation.Modbus" Version="*" />
+    <PackageReference Include="ThingsGateway.Foundation.OpcUa" Version="*" />
+    <PackageReference Include="ThingsGateway.Foundation.OpcDa" Version="*" />
+    <PackageReference Include="ThingsGateway.Foundation.SiemensS7" Version="*" />
+    <PackageReference Include="ThingsGateway.Foundation.Dlt645" Version="*" />
   </ItemGroup>
 
 </Project>
