--- a/src/debugs/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
+++ b/src/debugs/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
@@ -10,13 +10,6 @@
 		<TargetFrameworks>net6.0</TargetFrameworks>
 	</PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    　　<AllowedReferenceRelatedFileExtensions>
-      　　　　<!-- 阻止默认的 XML 和 PDB 文件复制到 RELEASE 的输出目录. 只有*.allowedextension 扩展名的文件可以被包含, 当然这个扩展的文件并不存在.-->
-      　　　　.allowedextension
-    </AllowedReferenceRelatedFileExtensions>
-  </PropertyGroup>
-  
 	<ItemGroup>
 		<Content Include="favicon.ico">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -38,10 +31,11 @@
 	</ItemGroup>
 
   <PropertyGroup Condition="'$(SolutionName)'=='ThingsGateway - Pro'">
-    <!--<DefineConstants>Pro</DefineConstants>-->
+    <DefineConstants>Pro</DefineConstants>
   </PropertyGroup>
+  
   <ItemGroup Condition="'$(SolutionName)'=='ThingsGateway - Pro'">
-    <!--<ProjectReference Include="$(SolutionDir)\pro\ThingsGateway.Debug.ProRcl\ThingsGateway.Debug.ProRcl.csproj" />-->
+    <ProjectReference Include="$(SolutionDir)\pro\ThingsGateway.Debug.ProRcl\ThingsGateway.Debug.ProRcl.csproj" />
   </ItemGroup>
 
 	<ItemGroup>
