--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -140,7 +140,7 @@ dotnet_naming_symbols.constant_fields.required_modifiers = const
 dotnet_style_operator_placement_when_wrapping = beginning_of_line
 tab_width = 4
 end_of_line = crlf
-dotnet_style_prefer_collection_expression = true:suggestion
+dotnet_style_prefer_collection_expression = when_types_exactly_match:suggestion
 dotnet_style_prefer_simplified_boolean_expressions = true:suggestion
 dotnet_style_prefer_compound_assignment = true:suggestion
 dotnet_style_prefer_simplified_interpolation = true:suggestion
@@ -216,7 +216,8 @@ csharp_preserve_single_line_blocks = true
 visual_basic_preferred_modifier_order = Partial,Default,Private,Protected,Public,Friend,NotOverridable,Overridable,MustOverride,Overloads,Overrides,MustInherit,NotInheritable,Static,Shared,Shadows,ReadOnly,WriteOnly,Dim,Const,WithEvents,Widening,Narrowing,Custom,Async:suggestion
 [*.cs]
 # Add file header
-file_header_template = Copyright (c) Argo Zhang (argo@163.com). All rights reserved.\nLicensed under the Apache License, Version 2.0. See License.txt in the project root for license information.\nWebsite: https://www.blazor.zone or https://argozhang.github.io/
+file_header_template = ------------------------------------------------------------------------------\n此代码版权声明为全文件覆盖，如有原作者特别声明，会在下方手动补充\n此代码版权（除特别声明外的代码）归作者本人Diego所有\n源代码使用协议遵循本仓库的开源协议及附加协议\nGitee源代码仓库：https://gitee.com/diego2098/ThingsGateway\nGithub源代码仓库：https://github.com/kimdiego2098/ThingsGateway\n使用文档：https://kimdiego2098.github.io/\nQQ群：605534569\n------------------------------------------------------------------------------
+
 csharp_style_namespace_declarations = file_scoped:suggestion
 csharp_style_expression_bodied_local_functions = true:silent
 csharp_using_directive_placement = outside_namespace:silent
