--- a/src/tools/ThingsGateway.Core/ThingsGateway.Core.csproj
+++ b/src/tools/ThingsGateway.Core/ThingsGateway.Core.csproj
@@ -5,5 +5,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ThingsGateway.NewLife.X\ThingsGateway.NewLife.X.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 </Project>
