--- a/src/adapter/ThingsGateway.Foundation.Variable/ThingsGateway.Foundation.Variable.csproj
+++ b/src/adapter/ThingsGateway.Foundation.Variable/ThingsGateway.Foundation.Variable.csproj
@@ -1,10 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="$(SolutionDir)Foundation.props" />
   <Import Project="$(SolutionDir)PackNuget.props" />
-  <Import Project="$(SolutionDir)Version.props" />
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net6.0;</TargetFrameworks>
+    <Version>8.8.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
