--- a/src/tools/ThingsGateway.CSScript/ThingsGateway.CSScript.csproj
+++ b/src/tools/ThingsGateway.CSScript/ThingsGateway.CSScript.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="$(SolutionDir)Version.props" />
   <Import Project="$(SolutionDir)PackNuget.props" />
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net6.0;</TargetFrameworks>
+    <Version>8.8.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
