refactor: 完善多语言资源

--- a/src/tools/ThingsGateway.Foundation.Razor/ThingsGateway.Foundation.Razor.csproj
+++ b/src/tools/ThingsGateway.Foundation.Razor/ThingsGateway.Foundation.Razor.csproj
@@ -4,6 +4,7 @@
   <Import Project="$(SolutionDir)PackNuget.props" />
 
   <ItemGroup>
+    <Content Remove="Locales\*.json" />
     <EmbeddedResource Include="Locales\*.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
