--- a/src/ThingsGateway.Server/appsettings.json
+++ b/src/ThingsGateway.Server/appsettings.json
@@ -2,6 +2,13 @@
   "urls": "http://*:5000",
 
   "ConfigurationScanDirectories": [ "" ],
+  "IgnoreConfigurationFiles": [ "" ],
+  "CorsAccessorSettings": {
+    "WithExposedHeaders": [ "access-token", "x-access-token", "environment" ],
+    "SignalRSupport": true
+  },
+
+
   //冗余配置
   "ManagementOptions": {
     "PrimaryUri": "127.0.0.1:7101", //主(备)站IP
