--- a/src/ThingsGateway.Admin.ASPNetCore/ThingsGateway.Admin.ASPNetCore.csproj
+++ b/src/ThingsGateway.Admin.ASPNetCore/ThingsGateway.Admin.ASPNetCore.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Locales\*.json" />
     <EmbeddedResource Include="Locales\*.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
