--- a/src/ThingsGateway.Gateway.ASPNetCore/ThingsGateway.Gateway.ASPNetCore.csproj
+++ b/src/ThingsGateway.Gateway.ASPNetCore/ThingsGateway.Gateway.ASPNetCore.csproj
@@ -16,11 +16,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Locales\*.json" />
     <EmbeddedResource Include="Locales\*.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
-
 </Project>
 
 
