--- a/src/ThingsGateway.Admin.NetCore/ThingsGateway.Admin.NetCore.csproj
+++ b/src/ThingsGateway.Admin.NetCore/ThingsGateway.Admin.NetCore.csproj
@@ -2,9 +2,17 @@
   <Import Project="$(SolutionDir)Version.props" />
   <Import Project="$(SolutionDir)PackNuget.props" />
 
+
   <ItemGroup>
     <ProjectReference Include="$(SolutionDir)\ThingsGateway.Admin.Application\ThingsGateway.Admin.Application.csproj" />
     <ProjectReference Include="..\ThingsGateway.Admin.Razor\ThingsGateway.Admin.Razor.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="Locales\*.json" />
+    <EmbeddedResource Include="Locales\*.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  
 </Project>
