--- a/src/ThingsGateway.Server/ThingsGateway.Server.csproj
+++ b/src/ThingsGateway.Server/ThingsGateway.Server.csproj
@@ -46,10 +46,20 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="Locales\*.json" />
+    <EmbeddedResource Include="Locales\*.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  
   
   <ItemGroup Condition="'$(SolutionName)'=='ThingsGateway - Pro'">
     <ProjectReference Include="$(SolutionDir)\pro\ThingsGateway.Gateway.ProRazor\ThingsGateway.Gateway.ProRazor.csproj" />
   </ItemGroup>
+
+  
+
 
   <ItemGroup>
     <Content Update="wwwroot\**">
